[project]
name = "tinyclaw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langchain-openai>=1.3.3",
    "playwright>=1.61.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.8",
    "requests>=2.34.2",
]
